# android-forked-bazel-rules-project

./: .bazelrc  MODULE.bazel  projectview.bazelproject
src/main/: AndroidManifest.xml
src/main/java/com/example/myapplication/: AndroidManifest.xml  BUILD  MainActivity.kt
src/main/java/com/example/myapplication/res/layout/: activity_main.xml
